Avance con bugcillos y cambios de diseno

--- a/Web/Views/Bitacora/Details.cshtml
+++ b/Web/Views/Bitacora/Details.cshtml
@@ -56,11 +56,11 @@
                                             <b id="descripcionActual">@rolServicio.Descripcion</b>
                                         </p>
                                         <p class="text-sm d-block">
-                                            @Html.DisplayName("Inicia"):
+                                            @Html.DisplayName("Fecha de inicio:"):
                                             <b>@rolServicio.FechaInicio</b>
                                         </p>
                                         <p class="text-sm d-block">
-                                            @Html.DisplayName("Finaliza"):
+                                            @Html.DisplayName("Fecha de cierre:"):
                                             <b>@rolServicio.FechaFin</b>
                                         </p>
                                         <p class="text-sm d-block">
@@ -184,6 +184,7 @@
                                         }
 
                                     </p>
+        
                                     <p class="text-sm d-block">
                                         @Html.DisplayNameFor(model => model.NombreUsuarioModifica):
                                         <b>@Html.DisplayFor(model => model.NombreUsuarioModifica)</b>
