--- a/Web/Views/Cancion/Create.cshtml
+++ b/Web/Views/Cancion/Create.cshtml
@@ -87,7 +87,7 @@
 
 
 
-            <div class="modal-footer justify-content-end">
+            <div style="float:right">
                 <button type="submit" class="btn btn-success">Guardar</button>
             </div>
 
