--- a/Web/Views/Categoria/Create.cshtml
+++ b/Web/Views/Categoria/Create.cshtml
@@ -43,7 +43,7 @@
                             @Html.ValidationMessageFor(model => model.Descripcion, "", new { @class = "text-danger" })
                         </div>
 
-                        <div class="modal-footer justify-content-end">
+                        <div style="float:right">
                             <button type="submit" class="btn btn-success">Guardar</button>
                         </div>
                     </div>
