--- a/Web/Views/Categoria/Edit.cshtml
+++ b/Web/Views/Categoria/Edit.cshtml
@@ -47,7 +47,7 @@
                                 <label class="custom-control-label" for="customSwitch3">Estado</label>
                             </div>
                         </div>
-                        <div class="modal-footer justify-content-end">
+                        <div style="float:right">
                             <button type="submit" class="btn btn-success">Guardar</button>
                         </div>
                     </div>
