--- a/Web/Views/Puesto/Edit.cshtml
+++ b/Web/Views/Puesto/Edit.cshtml
@@ -69,7 +69,7 @@
                             {
                                 <span class="right badge-pill badge-warning">La categoría de este puesto está desactivada.</span>
                             }
-                            <div class="modal-footer justify-content-end">
+                            <div style="float:right">
                                 <button type="submit" class="btn btn-success">Guardar</button>
                             </div>
                         </div>
