--- a/Web/Views/Reporte/ReporteUsuariosIngresados.cshtml
+++ b/Web/Views/Reporte/ReporteUsuariosIngresados.cshtml
@@ -53,11 +53,16 @@
                             </div>
                         </div>
 
-                        
-                        <div class="modal-footer justify-content-end">
-                            
+
+
+
+
+
+
+                        <div style="float:right">
+
                             <p class="tooltip--left" data-tooltip="Abre una nueva ventana mostrando el reporte">
-                                <input id="btnAceptar" type="submit" disabled formtarget="_blank" value="Generar Reporte" class="btn btn-success" />
+                                <input id="btnAceptar" type="submit" disabled formtarget="_blank" value="Generar Reporte" class="btn btn-info" />
                             </p>
                         </div>
                     </div>
