--- a/Web/Views/Shared/_MenuLider.cshtml
+++ b/Web/Views/Shared/_MenuLider.cshtml
@@ -58,7 +58,7 @@
 
                 <li class="nav-header">PROCESOS</li>
                 <li class="nav-item">
-                    <a href="@Url.Action("Index","Calendario")" class="nav-link">
+                    <a href="@Url.Action("Index","Calendario")" class="nav-link" id="menuagenda">
                         <i class="nav-icon far fa-calendar-alt"></i>
                         <p>
                             Gestión Agenda
@@ -68,7 +68,7 @@
 
 
                 <li class="nav-item">
-                    <a href="@Url.Action("Index","GestionCancion")" class="nav-link">
+                    <a href="@Url.Action("Index","GestionCancion")" class="nav-link" id="menuversion">
                         <i class="nav-icon fa fa-music"></i>
 
                         <p>
@@ -134,7 +134,7 @@
                 -->
 
                 <li class="nav-item">
-                    <a href="@Url.Action("Index","CorreoEmisor")" class="nav-link">
+                    <a href="@Url.Action("Index","CorreoEmisor")" class="nav-link" id="menucorreo">
                         <i class="far fa-envelope nav-icon"></i>
                         <p>Correo electrónico</p>
                     </a>
