--- a/Web/Views/Cancion/Edit.cshtml
+++ b/Web/Views/Cancion/Edit.cshtml
@@ -100,7 +100,7 @@
 
 
 
-            <div class="modal-footer justify-content-end">
+            <div style="float:right">
                 <button type="submit" class="btn btn-success">Guardar</button>
             </div>
 
