--- a/Web/Views/Cancion/Index.cshtml
+++ b/Web/Views/Cancion/Index.cshtml
@@ -94,7 +94,7 @@
                             <ul style="display:flex; list-style:none">
                                 <li>
                                     <p class="tooltip--triangle" data-tooltip="Ver detalles de la canción">
-                                        <a class="btn btn-primary btn-sm mr-1" href="@Url.Action("Details","Cancion", new { id = item.Id })">
+                                        <a class="btn btn-info btn-sm mr-1" href="@Url.Action("Details","Cancion", new { id = item.Id })">
                                             <i class="fas fa-eye">
                                             </i>
                                         </a>
@@ -106,7 +106,7 @@
                                 {
                                     <li>
                                         <p class="tooltip--triangle" data-tooltip="Editar la canción">
-                                            <a class="btn btn-info btn-sm mr-1" href="@Url.Action("Edit","Cancion", new { id = item.Id })">
+                                            <a class="btn btn-primary btn-sm mr-1" href="@Url.Action("Edit","Cancion", new { id = item.Id })">
                                                 <i class="fas fa-pencil-alt">
                                                 </i>
                                             </a>
@@ -292,13 +292,13 @@
     <script>
         function eliminar(id) {
             Swal.fire({
-                title: 'Estás seguro?',
-                text: "No podrás revertirlo!",
+                title: '¿Estás seguro?',
+                text: "¡No podrás revertirlo!",
                 icon: 'warning',
                 showCancelButton: true,
                 confirmButtonColor: '#3085d6',
                 cancelButtonColor: '#d33',
-                confirmButtonText: 'Sí, bórralo!',
+                confirmButtonText: 'Sí, ¡bórralo!',
                 cancelButtonText: 'Cancelar'
             }).then((result) => {
                 if (result.isConfirmed) {
