--- a/Web/Views/Categoria/Index.cshtml
+++ b/Web/Views/Categoria/Index.cshtml
@@ -80,7 +80,7 @@
 
                                                 <li>
                                                     <p class="tooltip--triangle" data-tooltip="Ver detalles de la categoría">
-                                                        <a class="btn btn-primary btn-sm mr-1" href="@Url.Action("Details","Categoria", new { id = item.Id })">
+                                                        <a class="btn btn-info btn-sm mr-1" href="@Url.Action("Details","Categoria", new { id = item.Id })">
                                                             <i class="fas fa-eye">
                                                             </i>
                                                         </a>
@@ -92,7 +92,7 @@
                                                 {
                                                     <li>
                                                         <p class="tooltip--triangle" data-tooltip="Editar la categoría">
-                                                            <a class="btn btn-info btn-sm mr-1" href="@Url.Action("Edit","Categoria", new { id = item.Id })">
+                                                            <a class="btn btn-primary btn-sm mr-1" href="@Url.Action("Edit","Categoria", new { id = item.Id })">
                                                                 <i class="fas fa-pencil-alt">
                                                                 </i>
                                                             </a>
@@ -270,13 +270,13 @@
     <script>
         function eliminar(id) {
             Swal.fire({
-                title: 'Estás seguro?',
-                text: "Se desactivarán los puestos vinculados a esta categoría.",
+                title: '¿Estás seguro?',
+                text: "Se desactivará la categoría y también los puestos vinculados a esta categoría.",
                 icon: 'warning',
                 showCancelButton: true,
                 confirmButtonColor: '#3085d6',
                 cancelButtonColor: '#d33',
-                confirmButtonText: 'Sí, desactívalo!',
+                confirmButtonText: 'Sí, ¡desactívalo!',
                 cancelButtonText: 'Cancelar'
             }).then((result) => {
                 if (result.isConfirmed) {
