--- a/Web/Views/Puesto/Create.cshtml
+++ b/Web/Views/Puesto/Create.cshtml
@@ -51,7 +51,7 @@
                         </div>
 
                
-                        <div class="modal-footer justify-content-end">
+                        <div style="float:right">
                             <button type="submit" class="btn btn-success">Guardar</button>
                         </div>
                     </div>
