--- a/Web/Views/Reporte/ReporteSesion.cshtml
+++ b/Web/Views/Reporte/ReporteSesion.cshtml
@@ -38,7 +38,7 @@
                         <div class="row">
                             <div class="col">
                                 <p class="tooltip--right float-left" data-tooltip="Genera un reporte de las sesiones de los usuarios">
-                                    <button class="btn btn-primary" onclick="Descargar()">
+                                    <button class="btn btn-info" onclick="Descargar()">
                                         <i class="fas fa-eye"></i> Mostrar Reporte
                                     </button>
                                 </p>
