--- a/Web/Views/RolServicio/Index.cshtml
+++ b/Web/Views/RolServicio/Index.cshtml
@@ -90,7 +90,7 @@
                             <ul style="display:flex; list-style:none">
                                 <li>
                                     <p class="tooltip--triangle" data-tooltip="Ver detalles del rol de servicio">
-                                        <a class="btn btn-primary btn-sm mr-1" href="@Url.Action("Details","RolServicio", new { id = item.Id })">
+                                        <a class="btn btn-info btn-sm mr-1" href="@Url.Action("Details","RolServicio", new { id = item.Id })">
                                             <i class="fas fa-eye">
                                             </i>
                                         </a>
@@ -102,7 +102,7 @@
                                 {
                             <li>
                                 <p class="tooltip--triangle" data-tooltip="Editar el rol de servicio">
-                                    <a class="btn btn-info btn-sm mr-1" href="@Url.Action("Edit","RolServicio", new { id = item.Id })">
+                                    <a class="btn btn-primary btn-sm mr-1" href="@Url.Action("Edit","RolServicio", new { id = item.Id })">
                                         <i class="fas fa-pencil-alt">
                                         </i>
                                     </a>
@@ -295,13 +295,13 @@
     <script>
         function eliminar(id) {
             Swal.fire({
-                title: 'Estás seguro?',
-                text: "No podrás revertirlo!",
+                title: '¿Estás seguro?',
+                text: "¡No podrás revertirlo!",
                 icon: 'warning',
                 showCancelButton: true,
                 confirmButtonColor: '#3085d6',
                 cancelButtonColor: '#d33',
-                confirmButtonText: 'Sí, bórralo!',
+                confirmButtonText: 'Sí, ¡bórralo!',
                 cancelButtonText: 'Cancelar'
             }).then((result) => {
                 if (result.isConfirmed) {
