--- a/Web/Views/Usuario/Create.cshtml
+++ b/Web/Views/Usuario/Create.cshtml
@@ -36,14 +36,14 @@
                 <div class="form-group">
                     <strong class="text-danger">*</strong>
                     @Html.LabelFor(model => model.Id, htmlAttributes: new { @class = "control-label" })
-                <div class="col-md-8">
-                    @Html.EditorFor(model => model.Id, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Id, "", new { @class = "text-danger" })
-                    @if(TempData["CustomError"] != null)
-                    {
-                        <p class="text-danger">@TempData["CustomError"]</p>
-                    }
-                </div>
+                    <div class="col-md-8">
+                        @Html.EditorFor(model => model.Id, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Id, "", new { @class = "text-danger" })
+                        @if (TempData["CustomError"] != null)
+                        {
+                            <p class="text-danger">@TempData["CustomError"]</p>
+                        }
+                    </div>
                 </div>
                 <div class="form-group">
                     <strong class="text-danger">*</strong>
@@ -99,10 +99,11 @@
 
             </div>
         </div>
+        <div style="float:right">
+            <button type="submit" class="btn btn-success">Guardar</button>
+        </div>
     </div>
-    <div class="modal-footer justify-content-end">
-        <button type="submit" class="btn btn-success">Guardar</button>
-    </div>
+    
 </div>
  }
 
