--- a/Web/Views/Usuario/Edit.cshtml
+++ b/Web/Views/Usuario/Edit.cshtml
@@ -97,10 +97,11 @@
 
             </div>
         </div>
+        <div style="float:right">
+            <button type="submit" class="btn btn-success">Guardar</button>
+        </div>
     </div>
-    <div class="modal-footer justify-content-end">
-        <button type="submit" class="btn btn-success">Guardar</button>
-    </div>
+
 </div>
 
 
