--- a/Web/Views/Usuario/Index.cshtml
+++ b/Web/Views/Usuario/Index.cshtml
@@ -320,13 +320,13 @@
     <script>
         function eliminar(id) {
             Swal.fire({
-                title: 'Estás seguro?',
+                title: '¿Estás seguro?',
                 text: "Se desactivará este usuario.",
                 icon: 'warning',
                 showCancelButton: true,
                 confirmButtonColor: '#3085d6',
                 cancelButtonColor: '#d33',
-                confirmButtonText: 'Sí, desactívalo!',
+                confirmButtonText: 'Sí, ¡desactívalo!',
                 cancelButtonText: 'Cancelar'
             }).then((result) => {
                 if (result.isConfirmed) {
